[gd_scene load_steps=6 format=2]

[ext_resource path="res://Script/KwadEdit.gd" type="Script" id=1]
[ext_resource path="res://Nodes/Kwad.tscn" type="PackedScene" id=2]
[ext_resource path="res://Textures/mossy-ground1-albedo.png" type="Texture" id=3]


[sub_resource type="CubeMesh" id=1]


[sub_resource type="SpatialMaterial" id=2]

albedo_texture = ExtResource( 3 )

[node name="Root" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="FramePanel" type="Panel" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = -230.0
margin_right = 400.0
margin_bottom = -10.0

[node name="ItemList" type="ItemList" parent="FramePanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -140.0
margin_top = -90.0
margin_right = 140.0
margin_bottom = 90.0

[node name="MotorPanel" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -190.0
margin_top = -230.0
margin_right = 190.0
margin_bottom = -10.0

[node name="ItemList" type="ItemList" parent="MotorPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -140.0
margin_top = -90.0
margin_right = 140.0
margin_bottom = 90.0

[node name="PropPanel" type="Panel" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -400.0
margin_top = -230.0
margin_right = -20.0
margin_bottom = -10.0

[node name="ItemList" type="ItemList" parent="PropPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -140.0
margin_top = -90.0
margin_right = 140.0
margin_bottom = 90.0

[node name="InfoPanel" type="Panel" parent="."]
margin_left = 10.0
margin_top = 10.0
margin_right = 340.0
margin_bottom = 50.0

[node name="OptionButton" type="OptionButton" parent="InfoPanel"]
margin_left = 10.0
margin_top = 10.0
margin_right = 140.0
margin_bottom = 30.0

[node name="SaveButton" type="Button" parent="InfoPanel"]
margin_left = 160.0
margin_top = 10.0
margin_right = 201.0
margin_bottom = 30.0
text = "Save"

[node name="NewButton" type="Button" parent="InfoPanel"]
margin_left = 220.0
margin_top = 10.0
margin_right = 260.0
margin_bottom = 30.0
text = "New"

[node name="ExitButton" type="Button" parent="InfoPanel"]
margin_left = 280.0
margin_top = 10.0
margin_right = 320.0
margin_bottom = 30.0
text = "Exit"

[node name="NameDialog" type="PopupDialog" parent="."]
margin_left = 470.0
margin_top = 210.0
margin_right = 740.0
margin_bottom = 330.0

[node name="Label" type="Label" parent="NameDialog"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -20.0
margin_top = 10.0
margin_right = 22.0
margin_bottom = 24.0
text = "Name:"

[node name="LineEdit" type="LineEdit" parent="NameDialog"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -115.0
margin_top = -12.0
margin_right = 115.0
margin_bottom = 12.0

[node name="MakeNewButton" type="Button" parent="NameDialog"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -15.5
margin_top = -30.0
margin_right = 15.5
margin_bottom = -10.0
text = "OK"

[node name="View" type="Spatial" parent="."]
editor/display_folded = true

[node name="Kwad" parent="View" instance=ExtResource( 2 )]
pause_mode = 1
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0, 0.0434563, 0 )

[node name="Camera" type="Camera" parent="View"]
transform = Transform( 1, 0, 0, 0, 0.757766, 0.652527, 0, -0.652527, 0.757766, 0, 0.154379, 0.279217 )
current = true

[node name="MeshInstance" type="MeshInstance" parent="View"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.05588, 0 )
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="DirectionalLight" type="DirectionalLight" parent="View"]
transform = Transform( 1, 0, 0, 0, 0.828497, 0.559993, 0, -0.559993, 0.828497, 0, 0.456337, 0.77016 )

[connection signal="item_selected" from="InfoPanel/OptionButton" to="." method="_on_OptionButton_item_selected"]
[connection signal="pressed" from="InfoPanel/NewButton" to="." method="_on_NewButton_pressed"]
[connection signal="pressed" from="InfoPanel/ExitButton" to="." method="_on_ExitButton_pressed"]
[connection signal="pressed" from="NameDialog/MakeNewButton" to="." method="_on_MakeNewButton_pressed"]
